fixed select list font color in dark mode

--- a/cardDatabase/static/css/darkmode/dark_mode_overrides.css
+++ b/cardDatabase/static/css/darkmode/dark_mode_overrides.css
@@ -219,3 +219,7 @@ a.closebtn{
 .darkmode-toggle-label{
     color: white;
 }
+
+.select-wrapper .search-wrap .md-form input{
+    color:black;
+}
